feat: add portfolio performance history tracking
- introduce PortfolioSnapshot entity and repository
- add PortfolioHistoryService and implementation
- add Flyway migration for portfolio_snapshots table
- extend portfolio service to support snapshot-based history
- refactor service package structure (move impl classes)
- update AGENTS.md with new feature and architecture notes
- update existing tests to align with new portfolio logic